--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 같은 팀원들끼리 공유해야 할 것도 많았고, 팀장으로서 소통의 창구가 필요한 것도 느끼고 있었기에 처음에는 짧은 지식으로나마 직접 위키페이지를 만들었다.
 (Vue.js로 로컬에서 라이브 서버를 띄워놓음…)
 처음에는 나름 잘 만들었다고 뿌듯해 했지만,
-로컬에서만 작동하는 부분(같은 네트워크 대역을 쓸때만 접속이 가능) 수정사항이나 새로운 요구사항이 발생할 때마다 변경이 힘듦 팀원들도 사실 많이 이용하지는 않았는지 별로 피드백이 없었음 위의 이유:(핑계)들로 프로젝트가 바빠지면서 점차 소홀히 관리하게 되었다....</p></div><footer class=entry-footer><span title='2024-02-28 21:06:14 +0900 KST'>February 28, 2024</span>&nbsp;·&nbsp;4 min&nbsp;·&nbsp;653 words&nbsp;·&nbsp;Leaf</footer><a class=entry-link aria-label="post link to 블로그를 쓰게 된 계기와 앞으로의 방향성" href=https://leaf-nam.github.io/posts/post_240228/></a></article></main><footer class=footer><span>&copy; 2024 <a href=https://leaf-nam.github.io/>Leaf, waiting for Spring</a></span>
+로컬에서만 작동하는 부분(같은 네트워크 대역을 쓸때만 접속이 가능) 수정사항이나 새로운 요구사항이 발생할 때마다 변경이 힘듦 팀원들도 사실 많이 이용하지는 않았는지 별로 피드백이 없었음 위의 이유(핑계)들로 프로젝트가 바빠지면서 점차 소홀히 관리하게 되었다....</p></div><footer class=entry-footer><span title='2024-02-28 21:06:14 +0900 KST'>February 28, 2024</span>&nbsp;·&nbsp;4 min&nbsp;·&nbsp;700 words&nbsp;·&nbsp;Leaf</footer><a class=entry-link aria-label="post link to 블로그를 쓰게 된 계기와 앞으로의 방향성" href=https://leaf-nam.github.io/posts/post_240228/></a></article></main><footer class=footer><span>&copy; 2024 <a href=https://leaf-nam.github.io/>Leaf, waiting for Spring</a></span>
 <span>Powered by
 <a href=https://gohugo.io/ rel="noopener noreferrer" target=_blank>Hugo</a> &
         <a href=https://github.com/adityatelange/hugo-PaperMod/ rel=noopener target=_blank>PaperMod</a></span></footer><a href=#top aria-label="go to top" title="Go to Top (Alt + G)" class=top-link id=top-link accesskey=g><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6" fill="currentcolor"><path d="M12 6H0l6-6z"/></svg>
